Fix tab spacing

--- a/src/components/TeamSelection/TeamSelection.css
+++ b/src/components/TeamSelection/TeamSelection.css
@@ -33,10 +33,9 @@
                 flex-wrap: wrap;
 
                 .tab {
-                    padding: 10px 20px;
-                    cursor: "pointer";
                     background-color: #f1f1f1;
                     border: 1px solid #ccc;
+                    flex-basis: 70px;
 
                 }
 
